--- a/srces/index.css
+++ b/srces/index.css
@@ -1,17 +1,19 @@
-body{
+body {
     background-color: #f9f7fe;
-   font-family: "Roboto", sans-serif;
-         
+    font-family: "Roboto", sans-serif;
+
 }
 
-header{
+header {
     border-bottom: 1px solid #f9f7fe;
     padding: 0 0 30px 0;
 }
 
-a{color: #885df1;}
+a {
+    color: #885df1;
+}
 
-.myweather{
+.myweather {
     background: white;
     max-width: 600px;
     margin: 45px auto;
@@ -20,7 +22,8 @@ a{color: #885df1;}
     padding: 30px;
 
 }
-.searchForm-input{
+
+.searchForm-input {
     background-color: #f9f7fe;
     border: none;
     border-radius: 6px;
@@ -29,8 +32,9 @@ a{color: #885df1;}
     padding: 15px 20px;
 
 }
-.searchForm-Press{
-        margin-left: 5px;
+
+.searchForm-Press {
+    margin-left: 5px;
     font-size: 18px;
     background-color: #885df1;
     color: white;
@@ -41,60 +45,73 @@ a{color: #885df1;}
     margin-left: 5px;
 }
 
-main{padding: 30px;}
-
-.weatherApp-city{
-        font-size: 38px;
-            font-weight: 900;
-            margin: 0;
-}
-p{
-        display: block;
-            margin-block-start: 1em;
-            margin-block-end: 1em;
-            margin-inline-start: 0px;
-            margin-inline-end: 0px;
-            unicode-bidi: isolate;
-}
-.weatherApp-timeNow{
-    color: rgba(39, 33, 66, 0.4);
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 24px;
+main {
+    padding: 30px;
 }
 
-.weather-information{
-    display: flex;
-    justify-content: space-between;
+.weatherApp-city {
+    font-size: 38px;
+    font-weight: 900;
+    margin: 0;
 }
 
-.weatherApp-time{
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    unicode-bidi: isolate;
+}
+
+.weatherApp-timeNow {
     color: rgba(39, 33, 66, 0.4);
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
 }
-.weatherApp-time strong{color: #f65282;}
 
-.temperature-Degree{display: flex;}
-
-.temperature-Degree-Icon{
-    position: relative;
-    top: -8px;
-    font-size: 40px;
-    margin-right: 10px;
+.weather-information {
+    display: flex;
+    justify-content: space-between;
 }
-.temperature-Degree-Value{
+
+.weatherApp-time {
+    color: rgba(39, 33, 66, 0.4);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
+.weatherApp-time strong {
+    color: #f65282;
+}
+
+.temperature-Degree {
+    display: flex;
+}
+
+.temperature-icon {
+    position: relative;
+    top: -1px;
+    width: 88px;
+    height: 88px;
+    margin-right: -23px;
+}
+
+.temperature-Degree-Value {
     font-size: 80px;
     font-weight: bold;
+    margin-left: 19px;
 }
-.temperature-Degree-Unit{
+
+.temperature-Degree-Unit {
     font-size: 28px;
     position: relative;
     top: 5px;
 }
 
-footer{
+footer {
     border-top: 1px solid #f9f7fe;
     padding: 30px 0 0 0;
     text-align: center;
